# Weather_Based_Wind_Turbine_Energy_Output_Prediction

./: README.md
Documents/: readme.md
Documents/1. Ideation Phase/: Brainstorming- Idea Generation- Prioritizaation Template.docx  Define Problem Statements Template.docx  Empathy Map Canvas.docx
Documents/2. Requirement Analysis/: Data Flow Diagrams and User Stories.docx  Solution Requirements.docx  Technology Stack - Template.docx
Documents/3. Project Design Phase/Problem - Solution Fit Template/: Problem - Solution Fit Template.docx
Documents/3. Project Design Phase/Proposed Solution/: Proposed Solution Template.docx
Documents/4. Project Planning Phase/: Project Planning Template.docx
Documents/5. Project Development Phase/Performance Testing/: Machine Learning.docx  User Acceptance Testing FSD.docx
ProjectFiles/: .gitignore  Wind_mill_model.ipynb  download_data.py  main.py  pyproject.toml  readme.md  test_model.py  wind turbine energy prediction.py
ProjectFiles/flask_server/: __init__.py  app.py  windApp.py
ProjectFiles/flask_server/static/: style.css
ProjectFiles/flask_server/templates/: home.html  predict.html
Video Demo/: readme.md
